--- a/modcon/Dockerfile.vscode
+++ b/modcon/Dockerfile.vscode
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.4
 # parameters
-ARG EXERCISE_NAME="VSCode - modcon"
+ARG EXERCISE_NAME="modcon"
 ARG DESCRIPTION="VSCode - ModCon Exercise"
 ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
 
