--- a/braitenberg/Dockerfile.vnc
+++ b/braitenberg/Dockerfile.vnc
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1.4
 # parameters
 ARG EXERCISE_NAME="braitenberg"
-ARG DESCRIPTION="VSCode - Braitenberge Exercise"
+ARG DESCRIPTION="VNC - Braitenberg Exercise"
 ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
 
 # ==================================================>
@@ -9,7 +9,7 @@ ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
 ARG ARCH
 ARG DISTRO=daffy
 ARG DOCKER_REGISTRY=docker.io
-ARG BASE_IMAGE=dt-vscode
+ARG BASE_IMAGE=dt-gui-tools
 ARG BASE_TAG=${DISTRO}-${ARCH}
 ARG LAUNCHER=default
 
@@ -44,7 +44,7 @@ COPY --from=recipe ./dependencies-py3.* "/tmp/"
 RUN python3 -m pip install -r /tmp/dependencies-py3.txt
 
 # store module metadata
-LABEL org.duckietown.label.module.type="exercise-vscode" \
+LABEL org.duckietown.label.module.type="exercise-vnc" \
     org.duckietown.label.module.name="${EXERCISE_NAME}" \
     org.duckietown.label.module.description="${DESCRIPTION}" \
     org.duckietown.label.platform.os="${TARGETOS}" \
@@ -55,5 +55,8 @@ LABEL org.duckietown.label.module.type="exercise-vscode" \
     org.duckietown.label.base.image="${BASE_IMAGE}" \
     org.duckietown.label.base.tag="${BASE_TAG}" \
     org.duckietown.label.maintainer="${MAINTAINER}"
+
+# set the VNC as the default launcher
+CMD ["dt-launcher-vnc"]
 # <== Do not change the code above this line
 # <==================================================
