--- a/modcon/settings.yaml
+++ b/modcon/settings.yaml
@@ -1,4 +1,6 @@
 # Exercise settings file
-agent:
-    # currently not implemented, the agent base image to use
-    base: "<AGENT_BASE_NAME_HERE>"
+
+agent_base: "duckietown_baseline"
+ws_dir: "solution" # directory that contains the code the user needs to see
+ros: true
+challenge: mooc-modcon
