added assets COPY back to Dockerfile.vnc

--- a/modcon/Dockerfile.vnc
+++ b/modcon/Dockerfile.vnc
@@ -60,3 +60,14 @@ LABEL org.duckietown.label.module.type="exercise-vnc" \
 CMD ["dt-launcher-vnc"]
 # <== Do not change the code above this line
 # <==================================================
+
+# copy stuff for the user directory
+COPY --from=recipe assets/vnc/root/Desktop/. /root/Desktop/
+COPY --from=recipe assets/vnc/root/Documents/. /root/Documents/
+COPY --from=recipe assets/vnc/root/icons/. /root/.icons/
+
+# copy custom binaries
+COPY --from=recipe assets/vnc/usr/bin/. /usr/bin/
+
+# copy RVIZ configuration
+COPY --from=recipe assets/vnc/opt/ros/noetic/share/rviz/. /opt/ros/noetic/share/rviz/
