minor changes in modcon

--- a/modcon/Dockerfile.vnc
+++ b/modcon/Dockerfile.vnc
@@ -71,3 +71,6 @@ COPY --from=recipe assets/vnc/usr/bin/. /usr/bin/
 
 # copy RVIZ configuration
 COPY --from=recipe assets/vnc/opt/ros/noetic/share/rviz/. /opt/ros/noetic/share/rviz/
+
+# remove icons that are not needed from the desktop
+RUN rm /root/Desktop/intrinsic_calibration.desktop
