--- a/visual-lane-servoing/settings.yaml
+++ b/visual-lane-servoing/settings.yaml
@@ -1,1 +1,7 @@
 # Exercise settings file
+agent_base: "duckietown_baseline"
+ws_dir: "solution" # directory that contains the code the user needs to see
+lab_dir: .         # directory to be mounted into the jupyter container
+agent_run_cmd: "default.sh" # the script in "launchers" to run the agent with
+ros: true
+challenge: mooc-visservoing
