--- a/visual-lane-servoing/submission.yaml
+++ b/visual-lane-servoing/submission.yaml
@@ -1,14 +1,15 @@
 # challenge name(s); defaults to all compatible challenges
-challenge: ["<CHALLENGE_NAME_HERE>"]
+challenge: ["mooc-visservoing"]
 
 # conventions + format
-protocol: "<PROTOCOL_NAME_HERE>"
+protocol: "aido2_db18_agent-z2"
 
 # any user label - displayed in "challenges list"
-user-label: "<EXERCISE_NAME_HERE>"
+user-label: "mooc-visservoing"
 
 # any JSON payload
 user-payload: {}
 
 # validation challenge
-validation_challenge: "<VALIDATION_CHALLENGE_NAME_HERE>"
+validation_challenge: "aido-hello-sim-validation"
+
