--- a/braitenberg/Dockerfile.vscode
+++ b/braitenberg/Dockerfile.vscode
@@ -55,5 +55,9 @@ LABEL org.duckietown.label.module.type="exercise-vscode" \
     org.duckietown.label.base.image="${BASE_IMAGE}" \
     org.duckietown.label.base.tag="${BASE_TAG}" \
     org.duckietown.label.maintainer="${MAINTAINER}"
+
+# tell Python to stop creating __pycache__
+ENV PYTHONDONTWRITEBYTECODE=1
+
 # <== Do not change the code above this line
 # <==================================================
