--- a/state-estimation/Dockerfile.vscode
+++ b/state-estimation/Dockerfile.vscode
@@ -62,6 +62,10 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # <== Do not change the code above this line
 # <==================================================
 
+# setup vscode
+COPY --from=recipe assets/vscode/setup.sh /tmp/vscode_setup.sh
+RUN /tmp/vscode_setup.sh
+
 
 # install python libraries
 RUN pip3 install -U \
