--- a/collision-detection/Dockerfile.vnc
+++ b/collision-detection/Dockerfile.vnc
@@ -1,15 +1,15 @@
 # syntax=docker/dockerfile:1.4
 # parameters
-ARG EXERCISE_NAME="<EXERCISE_NAME_HERE>"
-ARG DESCRIPTION="VSCode - <DESCRIPTION_HERE>"
-ARG MAINTAINER="<YOUR_FULL_NAME> (<YOUR_EMAIL_ADDRESS>)"
+ARG EXERCISE_NAME="collision-detection"
+ARG DESCRIPTION="VNC - Collision Detection"
+ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
 
 # ==================================================>
 # ==> Do not change the code below this line
 ARG ARCH
 ARG DISTRO=daffy
 ARG DOCKER_REGISTRY=docker.io
-ARG BASE_IMAGE=dt-vscode
+ARG BASE_IMAGE=dt-gui-tools
 ARG BASE_TAG=${DISTRO}-${ARCH}
 ARG LAUNCHER=default
 
@@ -44,7 +44,7 @@ COPY --from=recipe ./dependencies-py3.* "/tmp/"
 RUN python3 -m pip install -r /tmp/dependencies-py3.txt
 
 # store module metadata
-LABEL org.duckietown.label.module.type="exercise-vscode" \
+LABEL org.duckietown.label.module.type="exercise-vnc" \
     org.duckietown.label.module.name="${EXERCISE_NAME}" \
     org.duckietown.label.module.description="${DESCRIPTION}" \
     org.duckietown.label.platform.os="${TARGETOS}" \
@@ -56,12 +56,12 @@ LABEL org.duckietown.label.module.type="exercise-vscode" \
     org.duckietown.label.base.tag="${BASE_TAG}" \
     org.duckietown.label.maintainer="${MAINTAINER}"
 
-# tell Python to stop creating __pycache__
-ENV PYTHONDONTWRITEBYTECODE=1
-
+# set the VNC as the default launcher
+CMD ["dt-launcher-vnc"]
 # <== Do not change the code above this line
 # <==================================================
 
-# setup vscode
-COPY --from=recipe assets/vscode/setup.sh /tmp/vscode_setup.sh
-RUN /tmp/vscode_setup.sh
+# check that the configuration is ok (symbols exist)
+RUN node-launch --config node_launch.yaml --check
+
+ENTRYPOINT ["node-launch", "--config", "node_launch.yaml"]
