--- a/object-detection/Dockerfile.vnc
+++ b/object-detection/Dockerfile.vnc
@@ -62,15 +62,15 @@ CMD ["dt-launcher-vnc"]
 # <==================================================
 
 # Copy stuff for the user directory
-COPY --from-recipe assets/vnc/image/root/Desktop/. /root/Desktop/
-COPY --from-recipe assets/vnc/image/root/Documents/. /root/Documents/
-COPY --from-recipe assets/vnc/image/root/icons/. /root/.icons/
+COPY --from=recipe assets/vnc/image/root/Desktop/. /root/Desktop/
+COPY --from=recipe assets/vnc/image/root/Documents/. /root/Documents/
+COPY --from=recipe assets/vnc/image/root/icons/. /root/.icons/
 
 # Copy custom binaries
-COPY --from-recipe assets/vnc/image/usr/bin/. /usr/bin/
+COPY --from=recipe assets/vnc/image/usr/bin/. /usr/bin/
 
 # Copy rviz configuration
-COPY --from-recipe assets/vnc/image/opt/ros/noetic/share/rviz/. /opt/ros/noetic/share/rviz/
+COPY --from=recipe assets/vnc/image/opt/ros/noetic/share/rviz/. /opt/ros/noetic/share/rviz/
 
 # Remove extra Desktop icons
 RUN rm /root/Desktop/intrinsic_calibration.desktop
