--- a/braitenberg/settings.yaml
+++ b/braitenberg/settings.yaml
@@ -3,4 +3,4 @@
 agent_base: "template_random" # currently not implemented, the agent base image to use
 ws_dir: "solution" # directory that contains the code
 ros: false
-challenge: mooc-BV1
+challenge: lx22-BV1
