--- a/state-estimation/settings.yaml
+++ b/state-estimation/settings.yaml
@@ -5,7 +5,7 @@ ws_dir: "solution" # directory that contains the code the user needs to see
 lab_dir: .         # directory to be mounted into the jupyter container
 agent_run_cmd: "default.sh" # the launcher to run on startup
 ros: true
-challenge: mooc-state-estimation
+challenge: lx22-state-estimation
 
 files:
   - notebook:
