--- a/modcon/assets/environment/challenges/scenarios/sampled/LF-full-loop-001/scenario.yaml
+++ b/modcon/assets/environment/challenges/scenarios/sampled/LF-full-loop-001/scenario.yaml
@@ -7,6 +7,9 @@ robots:
     color: blue
     protocol: PROTOCOL_FULL
     description: Playable robot ego0
+    dynamics: duckietown_world.world_duckietown.pwm_dynamics.get_DB18_nominal
+    dynamics_params:
+      delay: 0.15
     controllable: true
     configuration:
       pose:
