--- a/object-detection/assets/environment/challenges/scenarios/sampled/LF-long-loop-with-duckies-001/scenario.yaml
+++ b/object-detection/assets/environment/challenges/scenarios/sampled/LF-long-loop-with-duckies-001/scenario.yaml
@@ -3,6 +3,9 @@ robots:
     color: red
     protocol: PROTOCOL_FULL
     description: Playable robot ego0
+    dynamics: duckietown_world.world_duckietown.pwm_dynamics.get_DB18_nominal
+    dynamics_params:
+      delay: 0.15
     controllable: true
     configuration:
       pose:
