--- a/state-estimation/assets/environment/challenges/lx22-state-estimation.challenge.yaml
+++ b/state-estimation/assets/environment/challenges/lx22-state-estimation.challenge.yaml
@@ -1,4 +1,4 @@
-challenge: mooc-state-estimation
+challenge: lx22-state-estimation
 
 title: "MOOC - State Estimation"
 tags: [visible, ml-validation, aido, aido-embodied, LF, v4, simulation, protocol-normal, mooc]
@@ -14,7 +14,7 @@ protocol: aido2_db18_agent-z2
 
 
 date-open: 2021-01-30T00:00Z
-date-close: 2021-12-31T00:00Z
+date-close: 2024-12-31T00:00Z
 
 
 scoring: !include scoring.yaml
@@ -34,7 +34,7 @@ steps:
       services:
 
         simulator:
-          image: ${DOCKER_REGISTRY}/duckietown/challenge-aido_lf-simulator-gym:daffy-amd64
+          image: ${DOCKER_REGISTRY}/duckietown/challenge-aido_lf-simulator-gym:daffy
 
           environment:
             AIDONODE_DATA_IN: /fifos/simulator-in
