--- a/state-estimation/assets/environment/challenges/scenarios/sampled/LF-zig-zag-002/scenario.yaml
+++ b/state-estimation/assets/environment/challenges/scenarios/sampled/LF-zig-zag-002/scenario.yaml
@@ -3,6 +3,9 @@ robots:
     color: red
     protocol: PROTOCOL_FULL
     description: Playable robot ego0
+    dynamics: duckietown_world.world_duckietown.pwm_dynamics.get_DB18_nominal
+    dynamics_params:
+      delay: 0.15
     controllable: true
     configuration:
       pose:
