--- a/state-estimation/submission.yaml
+++ b/state-estimation/submission.yaml
@@ -1,4 +1,4 @@
-challenge: [mooc-state-estimation]
+challenge: [lx22-state-estimation]
 
 protocol: aido2_db18_agent-z2
 user-label: "state estimation exercise"
