--- a/visual-lane-servoing/settings.yaml
+++ b/visual-lane-servoing/settings.yaml
@@ -4,4 +4,4 @@ ws_dir: "solution" # directory that contains the code the user needs to see
 lab_dir: .         # directory to be mounted into the jupyter container
 agent_run_cmd: "default.sh" # the script in "launchers" to run the agent with
 ros: true
-challenge: mooc-visservoing
+challenge: lx22-visservoing
