--- a/visual-lane-servoing/submission.yaml
+++ b/visual-lane-servoing/submission.yaml
@@ -1,15 +1,14 @@
 # challenge name(s); defaults to all compatible challenges
-challenge: ["mooc-visservoing"]
+challenge: ["lx22-visservoing"]
 
 # conventions + format
 protocol: "aido2_db18_agent-z2"
 
 # any user label - displayed in "challenges list"
-user-label: "mooc-visservoing"
+user-label: "lx22-visservoing"
 
 # any JSON payload
 user-payload: {}
 
 # validation challenge
 validation_challenge: "aido-hello-sim-validation"
-
