--- a/object-detection/assets/environment/challenges/lx22-objdet.challenge.yaml
+++ b/object-detection/assets/environment/challenges/lx22-objdet.challenge.yaml
@@ -1,6 +1,6 @@
 challenge: lx22-objdet
 
-title: "MOOC - Object Detection"
+title: "LX - Object Detection"
 tags: [visible, ml-validation, aido, aido-embodied, LF, v4, simulation, protocol-normal, mooc]
 description: |
   This is the challenge is part of the the MOOC's object detection exercise.
