--- a/state-estimation/assets/environment/challenges/lx22-state-estimation.challenge.yaml
+++ b/state-estimation/assets/environment/challenges/lx22-state-estimation.challenge.yaml
@@ -1,6 +1,6 @@
 challenge: lx22-state-estimation
 
-title: "MOOC - State Estimation"
+title: "LX - State Estimation"
 tags: [visible, ml-validation, aido, aido-embodied, LF, v4, simulation, protocol-normal, mooc]
 description: |
   This is the challenge is part of the the MOOC's state estimation exercise.
