--- a/modcon/assets/environment/challenges/lx22-modcon.challenge.yaml
+++ b/modcon/assets/environment/challenges/lx22-modcon.challenge.yaml
@@ -1,6 +1,6 @@
 challenge: lx22-modcon
 
-title: "MOOC - ModCon"
+title: "LX - ModCon"
 tags: [visible, ml-validation, aido, aido-embodied, LF, v4, simulation, protocol-normal, mooc]
 description: |
   This is the challenge to test the PID controller of the MOOC's modcon exercise.
