--- a/visual-lane-servoing/assets/environment/challenges/lx22-visservoing.challenge.yaml
+++ b/visual-lane-servoing/assets/environment/challenges/lx22-visservoing.challenge.yaml
@@ -1,6 +1,6 @@
 challenge: lx22-visservoing
 
-title: "MOOC - Visual Lane Servoing"
+title: "LX - Visual Lane Servoing"
 tags: [visible, ml-validation, aido, aido-embodied, LF, v4, simulation, protocol-normal, mooc]
 description: |
   This is the challenge to test the Visual Lane Servoing of the MOOC's robot vision exercise.
