--- a/braitenberg/Dockerfile.vscode
+++ b/braitenberg/Dockerfile.vscode
@@ -2,7 +2,7 @@
 # parameters
 ARG EXERCISE_NAME="braitenberg"
 ARG DESCRIPTION="VSCode - Braitenberge Exercise"
-ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
+ARG MAINTAINER="Andrea F. Daniele (afdaniele@duckietown.com)"
 
 # ==================================================>
 # ==> Do not change the code below this line
