--- a/collision-checker/Dockerfile.vscode
+++ b/collision-checker/Dockerfile.vscode
@@ -2,7 +2,7 @@
 # parameters
 ARG EXERCISE_NAME="collision-detection"
 ARG DESCRIPTION="VSCode - Collision Detection"
-ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
+ARG MAINTAINER="Andrea F. Daniele (afdaniele@duckietown.com)"
 
 # ==================================================>
 # ==> Do not change the code below this line
