--- a/object-detection/Dockerfile.vnc
+++ b/object-detection/Dockerfile.vnc
@@ -2,7 +2,7 @@
 # parameters
 ARG EXERCISE_NAME="object-detection"
 ARG DESCRIPTION="VNC - Object Detection"
-ARG MAINTAINER="<Andrea F. Daniele (afdaniele@ttic.edu)"
+ARG MAINTAINER="<Andrea F. Daniele (afdaniele@duckietown.com)"
 
 # ==================================================>
 # ==> Do not change the code below this line
