--- a/planning/Dockerfile
+++ b/planning/Dockerfile
@@ -9,7 +9,7 @@ ARG MAINTAINER="Andrea F. Daniele (afdaniele@ttic.edu)"
 ARG ARCH
 ARG DISTRO=daffy
 ARG DOCKER_REGISTRY=docker.io
-ARG BASE_IMAGE=aido-base-python3
+ARG BASE_IMAGE=dt-ros-commons
 ARG BASE_TAG=${DISTRO}-${ARCH}
 ARG LAUNCHER=default
 
@@ -70,16 +70,9 @@ COPY --from=meat ./assets/. "${REPO_PATH}/assets/"
 # copy the source code (meat)
 COPY --from=meat ./packages/. "${REPO_PATH}/packages/"
 
-# build packages
-RUN . /opt/ros/${ROS_DISTRO}/setup.sh && \
-  catkin build \
-    --workspace ${CATKIN_WS_DIR}/
-
 # install launcher scripts
 COPY --from=recipe ./launchers/. "${LAUNCH_PATH}/"
 RUN dt-install-launchers "${LAUNCH_PATH}"
-
-RUN PYTHONPATH=${REPO_PATH}/packages node-launch --check --config "${REPO_PATH}/assets/node_launch.yaml"
 
 # define default command
 CMD ["bash", "-c", "dt-launcher-${DT_LAUNCHER}"]
@@ -98,3 +91,9 @@ LABEL org.duckietown.label.module.type="exercise" \
     org.duckietown.label.maintainer="${MAINTAINER}"
 # <== Do not change the code above this line
 # <==================================================
+
+# make `packages/` directory discoverable
+ENV PYTHONPATH=${REPO_PATH}/packages
+
+# check agent
+RUN node-launch --check --config "${REPO_PATH}/assets/node_launch.yaml"
