--- a/braitenberg/Dockerfile.vnc
+++ b/braitenberg/Dockerfile.vnc
@@ -60,3 +60,19 @@ LABEL org.duckietown.label.module.type="exercise-vnc" \
 CMD ["dt-launcher-vnc"]
 # <== Do not change the code above this line
 # <==================================================
+
+# copy stuff for the user directory
+COPY --from=recipe assets/vnc/root/Desktop/. /root/Desktop/
+COPY --from=recipe assets/vnc/root/icons/. /root/.icons/
+
+# copy HSV script
+COPY --from=meat packages/examples/HSV_bound.py /root/Documents/HSV_bound.py
+
+# copy sample images
+COPY --from=meat assets/samples/big-duck/big-duck-15.jpg /root/Pictures/big-duck-15.jpg
+
+# copy custom binaries
+COPY --from=recipe assets/vnc/usr/bin/. /usr/bin/
+
+# remove icons that are not needed from the desktop
+RUN rm /root/Desktop/intrinsic_calibration.desktop
