--- a/object-detection/Dockerfile.vscode
+++ b/object-detection/Dockerfile.vscode
@@ -59,6 +59,9 @@ LABEL org.duckietown.label.module.type="exercise-vscode" \
 # <== Do not change the code above this line
 # <==================================================
 
+# install libraries
+RUN pip3 install -U tqdm
+
 # setup vscode
 COPY --from=recipe assets/vscode/setup.sh /tmp/vscode_setup.sh
 RUN /tmp/vscode_setup.sh
