--- a/modcon/Dockerfile.vscode
+++ b/modcon/Dockerfile.vscode
@@ -33,15 +33,31 @@ ARG TARGETVARIANT
 # check build arguments
 RUN dt-build-env-check "${EXERCISE_NAME}" "${MAINTAINER}" "${DESCRIPTION}"
 
+# define/create repository path
+ARG REPO_PATH="${CATKIN_WS_DIR}/src/${EXERCISE_NAME}"
+RUN mkdir -p "${REPO_PATH}"
+WORKDIR "${REPO_PATH}"
+
 # install apt dependencies
-COPY --from=recipe ./dependencies-apt.txt "/tmp/"
-RUN dt-apt-install /tmp/dependencies-apt.txt
+COPY --from=recipe ./dependencies-apt.txt "${REPO_PATH}/"
+RUN dt-apt-install ${REPO_PATH}/dependencies-apt.txt
 
 # install python3 dependencies
 ARG PIP_INDEX_URL="https://pypi.org/simple/"
 ENV PIP_INDEX_URL=${PIP_INDEX_URL}
-COPY --from=recipe ./dependencies-py3.* "/tmp/"
-RUN python3 -m pip install -r /tmp/dependencies-py3.txt
+COPY --from=recipe ./dependencies-py3.* "${REPO_PATH}/"
+RUN dt-pip3-install "${REPO_PATH}/dependencies-py3.*"
+
+# copy the assets (recipe)
+COPY --from=recipe ./assets "${REPO_PATH}/assets"
+
+# copy the source code (recipe)
+COPY --from=recipe ./packages "${REPO_PATH}/packages"
+
+# build packages
+RUN . /opt/ros/${ROS_DISTRO}/setup.sh && \
+  catkin build \
+    --workspace ${CATKIN_WS_DIR}/
 
 # store module metadata
 LABEL org.duckietown.label.module.type="exercise-vscode" \
