--- a/debug/Dockerfile.vnc
+++ b/debug/Dockerfile.vnc
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1.4
 # parameters
-ARG EXERCISE_NAME="state-estimation"
-ARG DESCRIPTION="VNC - State Estimation"
+ARG EXERCISE_NAME="debug"
+ARG DESCRIPTION="VNC - Debug"
 ARG MAINTAINER="Andrea F. Daniele (afdaniele@duckietown.com)"
 
 # ==================================================>
